tests/src/Loader/classloader/generics/Instantiation/Positive/NestedStruct04.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_NestedStruct04_NestedStruct04_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_NestedStruct04_NestedStruct04_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\NestedStruct04\\NestedStruct04.cmd");
        }
    }
}
