tests/src/Loader/classloader/generics/Instantiation/Negative/param04.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param04_param04_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param04_param04_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param04\\param04.cmd");
        }
    }
}
